proyectoCompilador/src/services/myantlr4/MyJavaParser.py
# Generated from MyJava.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MyJavaParser ( Parser ):

    grammarFileName = "MyJava.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'package'", "'import'", "'class'", "'public'", 
                     "'protected'", "'private'", "'abstract'", "'static'", 
                     "'final'", "'boolean'", "'char'", "'byte'", "'short'", 
                     "'int'", "'long'", "'float'", "'double'", "'String'", 
                     "'.'", "';'", "','", "'='", "'{'", "'}'", "'['", "']'", 
                     "'('", "')'", "':'", "'void'", "'main'", "'if'", "'else'", 
                     "'while'", "'do'", "'for'", "'>'", "'<'", "'>='", "'<='", 
                     "'=='", "'!='", "'++'", "'--'", "'+'", "'-'", "'*'", 
                     "'/'", "'switch'", "'case'", "'default'", "'break'" ]

    symbolicNames = [ "<INVALID>", "PACKAGE", "IMPORT", "CLASS", "PUBLIC", 
                      "PROTECTED", "PRIVATE", "ABSTRACT", "STATIC", "FINAL", 
                      "BOOLEAN", "CHAR", "BYTE", "SHORT", "INT", "LONG", 
                      "FLOAT", "DOUBLE", "STRING", "PUNTO", "PUNTOCOMA", 
                      "COMA", "IGUAL", "LLAVEIZQ", "LLAVEDER", "CORCHIZQ", 
                      "CORCHDER", "PARENIZQ", "PARENDER", "DOSPUNTOS", "VOID", 
                      "MAIN", "IF", "ELSE", "WHILE", "DO", "FOR", "MAYOR", 
                      "MENOR", "MAYORIGUAL", "MENORIGUAL", "IGUALIGUAL", 
                      "DISTINTO", "MASMAS", "MENOSMENOS", "MAS", "MENOS", 
                      "ASTERISCO", "DIV", "SWITCH", "CASE", "DEFAULT", "BREAK", 
                      "INTEGER_LITERAL", "FLOAT_LITERAL", "CHAR_LITERAL", 
                      "STRING_LITERAL", "BOOLEAN_LITERAL", "Identifier", 
                      "COMMENT", "LINE_COMMENT", "WS" ]

    RULE_compilationUnit = 0
    RULE_packageDeclaration = 1
    RULE_importDeclaration = 2
    RULE_typeDeclaration = 3
    RULE_classDeclaration = 4
    RULE_classModifier = 5
    RULE_classBody = 6
    RULE_classBodyDeclaration = 7
    RULE_mainMethodDeclaration = 8
    RULE_methodDeclaration = 9
    RULE_methodDeclarator = 10
    RULE_methodInitializer = 11
    RULE_classVariableDeclaration = 12
    RULE_typeOrVoid = 13
    RULE_formalParameters = 14
    RULE_variableModifier = 15
    RULE_formalParameterList = 16
    RULE_formalParameter = 17
    RULE_variableDeclaratorId = 18
    RULE_methodBody = 19
    RULE_block = 20
    RULE_blockStatement = 21
    RULE_localVariableDeclarationStatement = 22
    RULE_localVariableDeclaration = 23
    RULE_statement = 24
    RULE_expressionStatement = 25
    RULE_ifStatement = 26
    RULE_whileStatement = 27
    RULE_doWhileStatement = 28
    RULE_forStatement = 29
    RULE_forControl = 30
    RULE_forInit = 31
    RULE_forUpdate = 32
    RULE_switchStatement = 33
    RULE_switchBlock = 34
    RULE_switchBlockStatementGroup = 35
    RULE_switchLabel = 36
    RULE_breakStatement = 37
    RULE_expressionList = 38
    RULE_booleanExpression = 39
    RULE_relationalOperator = 40
    RULE_memberModifier = 41
    RULE_type = 42
    RULE_primitiveType = 43
    RULE_variableDeclaratorList = 44
    RULE_localVariableDeclaratorList = 45
    RULE_variableDeclarator = 46
    RULE_variableInitializer = 47
    RULE_expression = 48
    RULE_literal = 49
    RULE_qualifiedName = 50

    ruleNames =  [ "compilationUnit", "packageDeclaration", "importDeclaration", 
                   "typeDeclaration", "classDeclaration", "classModifier", 
                   "classBody", "classBodyDeclaration", "mainMethodDeclaration", 
                   "methodDeclaration", "methodDeclarator", "methodInitializer", 
                   "classVariableDeclaration", "typeOrVoid", "formalParameters", 
                   "variableModifier", "formalParameterList", "formalParameter", 
                   "variableDeclaratorId", "methodBody", "block", "blockStatement", 
                   "localVariableDeclarationStatement", "localVariableDeclaration", 
                   "statement", "expressionStatement", "ifStatement", "whileStatement", 
                   "doWhileStatement", "forStatement", "forControl", "forInit", 
                   "forUpdate", "switchStatement", "switchBlock", "switchBlockStatementGroup", 
                   "switchLabel", "breakStatement", "expressionList", "booleanExpression", 
                   "relationalOperator", "memberModifier", "type", "primitiveType", 
                   "variableDeclaratorList", "localVariableDeclaratorList", 
                   "variableDeclarator", "variableInitializer", "expression", 
                   "literal", "qualifiedName" ]

    EOF = Token.EOF
    PACKAGE=1
    IMPORT=2
    CLASS=3
    PUBLIC=4
    PROTECTED=5
    PRIVATE=6
    ABSTRACT=7
    STATIC=8
    FINAL=9
    BOOLEAN=10
    CHAR=11
    BYTE=12
    SHORT=13
    INT=14
    LONG=15
    FLOAT=16
    DOUBLE=17
    STRING=18
    PUNTO=19
    PUNTOCOMA=20
    COMA=21
    IGUAL=22
    LLAVEIZQ=23
    LLAVEDER=24
    CORCHIZQ=25
    CORCHDER=26
    PARENIZQ=27
    PARENDER=28
    DOSPUNTOS=29
    VOID=30
    MAIN=31
    IF=32
    ELSE=33
    WHILE=34
    DO=35
    FOR=36
    MAYOR=37
    MENOR=38
    MAYORIGUAL=39
    MENORIGUAL=40
    IGUALIGUAL=41
    DISTINTO=42
    MASMAS=43
    MENOSMENOS=44
    MAS=45
    MENOS=46
    ASTERISCO=47
    DIV=48
    SWITCH=49
    CASE=50
    DEFAULT=51
    BREAK=52
    INTEGER_LITERAL=53
    FLOAT_LITERAL=54
    CHAR_LITERAL=55
    STRING_LITERAL=56
    BOOLEAN_LITERAL=57
    Identifier=58
    COMMENT=59
    LINE_COMMENT=60
    WS=61

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CompilationUnitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MyJavaParser.EOF, 0)

        def packageDeclaration(self):
            return self.getTypedRuleContext(MyJavaParser.PackageDeclarationContext,0)


        def importDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyJavaParser.ImportDeclarationContext)
            else:
                return self.getTypedRuleContext(MyJavaParser.ImportDeclarationContext,i)


        def typeDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyJavaParser.TypeDeclarationContext)
            else:
                return self.getTypedRuleContext(MyJavaParser.TypeDeclarationContext,i)


        def getRuleIndex(self):
            return MyJavaParser.RULE_compilationUnit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompilationUnit" ):
                listener.enterCompilationUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompilationUnit" ):
                listener.exitCompilationUnit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompilationUnit" ):
                return visitor.visitCompilationUnit(self)
            else:
                return visitor.visitChildren(self)




    def compilationUnit(self):

        localctx = MyJavaParser.CompilationUnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_compilationUnit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 102
                self.packageDeclaration()


            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 105
                self.importDeclaration()
                self.state = 110
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1016) != 0):
                self.state = 111
                self.typeDeclaration()
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 117
            self.match(MyJavaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PackageDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PACKAGE(self):
            return self.getToken(MyJavaParser.PACKAGE, 0)

        def qualifiedName(self):
            return self.getTypedRuleContext(MyJavaParser.QualifiedNameContext,0)


        def PUNTOCOMA(self):
            return self.getToken(MyJavaParser.PUNTOCOMA, 0)

        def getRuleIndex(self):
            return MyJavaParser.RULE_packageDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPackageDeclaration" ):
                listener.enterPackageDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPackageDeclaration" ):
                listener.exitPackageDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPackageDeclaration" ):
                return visitor.visitPackageDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def packageDeclaration(self):

        localctx = MyJavaParser.PackageDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_packageDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(MyJavaParser.PACKAGE)
            self.state = 120
            self.qualifiedName()
            self.state = 121
            self.match(MyJavaParser.PUNTOCOMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(MyJavaParser.IMPORT, 0)

        def qualifiedName(self):
            return self.getTypedRuleContext(MyJavaParser.QualifiedNameContext,0)


        def PUNTOCOMA(self):
            return self.getToken(MyJavaParser.PUNTOCOMA, 0)

        def PUNTO(self):
            return self.getToken(MyJavaParser.PUNTO, 0)

        def ASTERISCO(self):
            return self.getToken(MyJavaParser.ASTERISCO, 0)

        def getRuleIndex(self):
            return MyJavaParser.RULE_importDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportDeclaration" ):
                listener.enterImportDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportDeclaration" ):
                listener.exitImportDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportDeclaration" ):
                return visitor.visitImportDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def importDeclaration(self):

        localctx = MyJavaParser.ImportDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_importDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(MyJavaParser.IMPORT)
            self.state = 124
            self.qualifiedName()
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==19:
                self.state = 125
                self.match(MyJavaParser.PUNTO)
                self.state = 126
                self.match(MyJavaParser.ASTERISCO)


            self.state = 129
            self.match(MyJavaParser.PUNTOCOMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classDeclaration(self):
            return self.getTypedRuleContext(MyJavaParser.ClassDeclarationContext,0)


        def getRuleIndex(self):
            return MyJavaParser.RULE_typeDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeDeclaration" ):
                listener.enterTypeDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeDeclaration" ):
                listener.exitTypeDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeDeclaration" ):
                return visitor.visitTypeDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def typeDeclaration(self):

        localctx = MyJavaParser.TypeDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_typeDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.classDeclaration()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(MyJavaParser.CLASS, 0)

        def Identifier(self):
            return self.getToken(MyJavaParser.Identifier, 0)

        def LLAVEIZQ(self):
            return self.getToken(MyJavaParser.LLAVEIZQ, 0)

        def classBody(self):
            return self.getTypedRuleContext(MyJavaParser.ClassBodyContext,0)


        def LLAVEDER(self):
            return self.getToken(MyJavaParser.LLAVEDER, 0)

        def classModifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyJavaParser.ClassModifierContext)
            else:
                return self.getTypedRuleContext(MyJavaParser.ClassModifierContext,i)


        def getRuleIndex(self):
            return MyJavaParser.RULE_classDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDeclaration" ):
                listener.enterClassDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDeclaration" ):
                listener.exitClassDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDeclaration" ):
                return visitor.visitClassDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def classDeclaration(self):

        localctx = MyJavaParser.ClassDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_classDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1008) != 0):
                self.state = 133
                self.classModifier()
                self.state = 138
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 139
            self.match(MyJavaParser.CLASS)
            self.state = 140
            self.match(MyJavaParser.Identifier)
            self.state = 141
            self.match(MyJavaParser.LLAVEIZQ)
            self.state = 142
            self.classBody()
            self.state = 143
            self.match(MyJavaParser.LLAVEDER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassModifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PUBLIC(self):
            return self.getToken(MyJavaParser.PUBLIC, 0)

        def PROTECTED(self):
            return self.getToken(MyJavaParser.PROTECTED, 0)

        def PRIVATE(self):
            return self.getToken(MyJavaParser.PRIVATE, 0)

        def ABSTRACT(self):
            return self.getToken(MyJavaParser.ABSTRACT, 0)

        def STATIC(self):
            return self.getToken(MyJavaParser.STATIC, 0)

        def FINAL(self):
            return self.getToken(MyJavaParser.FINAL, 0)

        def getRuleIndex(self):
            return MyJavaParser.RULE_classModifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassModifier" ):
                listener.enterClassModifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassModifier" ):
                listener.exitClassModifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassModifier" ):
                return visitor.visitClassModifier(self)
            else:
                return visitor.visitChildren(self)




    def classModifier(self):

        localctx = MyJavaParser.ClassModifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_classModifier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1008) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classBodyDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyJavaParser.ClassBodyDeclarationContext)
            else:
                return self.getTypedRuleContext(MyJavaParser.ClassBodyDeclarationContext,i)


        def getRuleIndex(self):
            return MyJavaParser.RULE_classBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassBody" ):
                listener.enterClassBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassBody" ):
                listener.exitClassBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassBody" ):
                return visitor.visitClassBody(self)
            else:
                return visitor.visitChildren(self)




    def classBody(self):

        localctx = MyJavaParser.ClassBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_classBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 288230377227026288) != 0):
                self.state = 147
                self.classBodyDeclaration()
                self.state = 152
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassBodyDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classVariableDeclaration(self):
            return self.getTypedRuleContext(MyJavaParser.ClassVariableDeclarationContext,0)


        def methodDeclaration(self):
            return self.getTypedRuleContext(MyJavaParser.MethodDeclarationContext,0)


        def mainMethodDeclaration(self):
            return self.getTypedRuleContext(MyJavaParser.MainMethodDeclarationContext,0)


        def PUNTOCOMA(self):
            return self.getToken(MyJavaParser.PUNTOCOMA, 0)

        def getRuleIndex(self):
            return MyJavaParser.RULE_classBodyDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassBodyDeclaration" ):
                listener.enterClassBodyDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassBodyDeclaration" ):
                listener.exitClassBodyDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassBodyDeclaration" ):
                return visitor.visitClassBodyDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def classBodyDeclaration(self):

        localctx = MyJavaParser.ClassBodyDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_classBodyDeclaration)
        try:
            self.state = 157
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 153
                self.classVariableDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 154
                self.methodDeclaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 155
                self.mainMethodDeclaration()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 156
                self.match(MyJavaParser.PUNTOCOMA)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainMethodDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PUBLIC(self):
            return self.getToken(MyJavaParser.PUBLIC, 0)

        def STATIC(self):
            return self.getToken(MyJavaParser.STATIC, 0)

        def VOID(self):
            return self.getToken(MyJavaParser.VOID, 0)

        def MAIN(self):
            return self.getToken(MyJavaParser.MAIN, 0)

        def PARENIZQ(self):
            return self.getToken(MyJavaParser.PARENIZQ, 0)

        def type_(self):
            return self.getTypedRuleContext(MyJavaParser.TypeContext,0)


        def CORCHIZQ(self):
            return self.getToken(MyJavaParser.CORCHIZQ, 0)

        def CORCHDER(self):
            return self.getToken(MyJavaParser.CORCHDER, 0)

        def Identifier(self):
            return self.getToken(MyJavaParser.Identifier, 0)

        def PARENDER(self):
            return self.getToken(MyJavaParser.PARENDER, 0)

        def methodBody(self):
            return self.getTypedRuleContext(MyJavaParser.MethodBodyContext,0)


        def getRuleIndex(self):
            return MyJavaParser.RULE_mainMethodDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMainMethodDeclaration" ):
                listener.enterMainMethodDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMainMethodDeclaration" ):
                listener.exitMainMethodDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMainMethodDeclaration" ):
                return visitor.visitMainMethodDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def mainMethodDeclaration(self):
